Hoping this works!

--- a/Mission6Assignment/Views/Home/Index.cshtml
+++ b/Mission6Assignment/Views/Home/Index.cshtml
@@ -7,3 +7,7 @@
     <br />
 	<img src="~/img/hiltonbro.jpg" />
 </div>
+
+<div>
+    <a asp-controller="Home" asp-action="MovieList">View Movie List</a>
+</div>
