--- a/Mission6Assignment/Views/Home/movieform.cshtml
+++ b/Mission6Assignment/Views/Home/movieform.cshtml
@@ -4,23 +4,36 @@
 @{
 }
 
-@model Mission6Assignment.Models.Application
+@model Mission6Assignment.Models.Movie
 
 <h1>Movie Form</h1>
 
 <form method="post">
+    <input type="hidden" asp-for="MovieId" />
     <label asp-for="Title">Title: </label>
-    <input asp-for="Title"/>
+    <input asp-for="Title" required/>
+    <span asp-validation-for="Title" class="text-danger"></span>
     <br />
-    <label asp-for="Category">Category: </label>
-    <input asp-for="Category"/>
+
+    <select asp-for="CategoryId" required>
+        <option value="">Select a Category</option>
+        @foreach (Category c in ViewBag.Categories)
+        {
+            <option value="@c.CategoryId">@c.CategoryName</option>
+        }
+    </select>
+    <span asp-validation-for="CategoryId" class="text-danger"></span>
     <br />
+
     <label asp-for="Year">Year: </label>
-    <input asp-for="Year"/>
+    <input asp-for="Year" type="number" min="1888" required />
+    <span asp-validation-for="Year" class="text-danger"></span>
     <br />
+
     <label asp-for="Director">Director: </label>
-    <input asp-for="Director"/>
+    <input asp-for="Director" />
     <br />
+
     <label asp-for="Rating">Rating: </label>
     <select asp-for="Rating">
         <option value="G">G</option>
@@ -29,19 +42,37 @@
         <option value="R">R</option>
     </select>
     <br />
+
     <label asp-for="Edited">Edited: </label>
-    <select asp-for="Edited">
-        <option value="True">Yes</option>
-        <option value="False">No</option>
-    </select>    
+    <select asp-for="Edited" required>
+        <option value="1">Yes</option>
+        <option value="0">No</option>
+    </select>
+    <span asp-validation-for="Edited" class="text-danger"></span>
     <br />
-    <label asp-for="Lent">Lent To: </label>
-    <input asp-for="Lent"/>
+
+    <label asp-for="LentTo">Lent To: </label>
+    <input asp-for="LentTo" />
     <br />
+
+    <label asp-for="CopiedToPlex">Copied to Plex? </label>
+    <select asp-for="CopiedToPlex" required>
+        <option value="1">Yes</option>
+        <option value="0">No</option>
+    </select>
+    <span asp-validation-for="CopiedToPlex" class="text-danger"></span>
+    <br />
+
     <label asp-for="Notes">Notes: </label>
-    <input asp-for="Notes" maxlength="25"/>
+    <input asp-for="Notes" maxlength="25" />
     <br />
     <br />
 
     <button type="submit">Submit Movie</button>
-</form>
+</form> 
+
+@section Scripts {
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+}
